# Art-REST-API

./: .gitignore  Dockerfile  Makefile  entrypoint.sh  nginx.conf  pyproject.toml
.gigaide/: gigaide.properties
core/api/: schemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/customers/: handlers.py  schemas.py
core/api/v1/guide/: handlers.py  schemas.py
core/api/v1/questions/: filters.py  handlers.py  schemas.py
core/apps/customers/: admin.py  apps.py  customer_session_model.py  entities.py  image.py  models.py  tasks.py  use_cases.py
core/apps/customers/exceptions/: codes.py  customer_sessions.py  customers.py
core/apps/customers/migrations/: 0007_customer_completed_tests_customer_in_process_and_more.py  0008_remove_customer_completed_tests.py  0009_merge_20250106_1453.py  0010_remove_customer_access_token_and_more.py  0011_alter_customer_picture.py
core/apps/customers/services/: auth.py  codes.py  customer_sessions.py  customers.py  senders.py
core/apps/guide/: admin.py  apps.py  containers.py  exceptions.py  models.py  signals.py  use_cases.py
core/apps/guide/entities/: guide.py
core/apps/guide/migrations/: 0001_initial.py  0002_alter_card_options.py  0003_auto_20250401_1053.py  0004_alter_card_search_vector_and_more.py
core/apps/guide/services/: guide.py
core/apps/questions/: admin.py  apps.py  containers.py  tasks.py  use_cases.py
core/apps/questions/entities/: attempts.py  questions.py  sessions.py  subjects.py  (+1 more)
core/project/: celery.py  urls.py
core/project/settings/: main.py
docker_compose/: app.yaml  storages.yaml
(+17 files in other folders)
